# democratic-admin-bot

./: .gitignore  Makefile  README.md  example.env.json  go.mod  registerWebhook.sh
bot/: main.go
rust_version/: Cargo.toml  loadToken.sh
rust_version/src/: example_buttons.rss  lib.rs  main.rs
